--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ version: "3"
 services:
   nginx:
     build:
-      context: .
+      context: ./nginx/ #since docker file is within nginx and config that way
     ports:
       - 8000:80
     volumes:
-      - ./html/:/usr/share/nginx/html #mapping the current html path to container path
+      - ./nginx/html/:/usr/share/nginx/html #mapping the current html path to container path should be based on this file path
 
