ns.master.com port forwarded

--- a/dns/named.conf
+++ b/dns/named.conf
@@ -1,9 +1,13 @@
+options {
+    directory "var/bind";
+    allow-transfer { "none"; };
+    allow-query { any; };
+    listen-on { any; };
+};
+
+
+
 zone "master.com" IN {
     type master;
-    file "/etc/bind/zone/master.com"
-}
-
-zone "slave.com" IN {
-    type slave;
-    file "/etc/bind/zone/slave.com"
-}
+    file "/etc/bind/zone/master.com";
+};
