--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,8 +3,8 @@
 server{
     listen 80; 
     # listen [::]:80  #ipv6 setup
-    # server_name d.com; #d is domain name setting stuff up for diff server 
-    server_name localhost;
+    server_name ns.master.com; #ns.master is domain name setting stuff up for diff server 
+    # server_name localhost;
 
     location / {
         root /usr/share/nginx/html/main; #root location for static files or serve files
