newline in .com files along with settings changes

--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,8 +2,8 @@
 
 server{
     listen 80; 
-    # listen [::]:80  #ipv6 setup
-    server_name ns.master.com; #ns.master is domain name setting stuff up for diff server 
+    
+    server_name master.com ns.master.com *.master.com; #ns.master is domain name setting stuff up for diff server 
     # server_name localhost;
 
     location / {
@@ -14,9 +14,16 @@ server{
 }
 
 #individual server setting for multiple domains
-# server{
-#     listen 80;
-#     # listen [::]:80  #ipv6 setup
-#     server_name e.com; #host name 
-# }
+server{
+    listen 80; 
+    
+    server_name slave.com ns.slave.com *.slave.com; #ns.master is domain name setting stuff up for diff server 
+    # server_name localhost;
+
+    location / {
+        root /usr/share/nginx/html/slave; #root location for static files or serve files
+        index index.html; # index file or front page 
+    }
+
+}
 
