--- a/dns/named.conf
+++ b/dns/named.conf
@@ -11,3 +11,8 @@ zone "master.com" IN {
     type master;
     file "/etc/bind/zone/master.com";
 };
+
+zone "slave.com" IN {
+    type master;
+    file "/etc/bind/zone/slave.com";
+};
