changed conf file

--- a/dns/named.conf
+++ b/dns/named.conf
@@ -7,9 +7,9 @@ options {
 
 
 
-zone "master.com" IN {
+zone "main.com" IN {
     type master;
-    file "/etc/bind/zone/master.com";
+    file "/etc/bind/zone/main.com";
 };
 
 zone "slave.com" IN {
