--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,7 +3,7 @@
 server{
     listen 80; 
     
-    server_name master.com ns.master.com *.master.com; #ns.master is domain name setting stuff up for diff server 
+    server_name main.com ns.main.com *.main.com; #ns.main is domain name setting stuff up for diff server 
     # server_name localhost;
 
     location / {
