try with 127.0.0.11 which is obtained in nslookup

--- a/dns/named.conf
+++ b/dns/named.conf
@@ -1,8 +1,8 @@
 options {
-    directory "var/bind";
+    directory "/var/bind";
     allow-transfer { "none"; };
     allow-query { any; };
-    listen-on { any; };
+    listen-on port 53 { 127.0.0.11; };
 };
 
 
