add root access in dockerfile for dns

--- a/dns/named.conf
+++ b/dns/named.conf
@@ -1,8 +1,8 @@
 options {
     directory "/var/bind";
-    allow-transfer { "none"; };
+    allow-transfer { none; };
     allow-query { any; };
-    listen-on port 53 { 127.0.0.11; };
+    listen-on { any; };
 };
 
 
