--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -3,7 +3,7 @@
 server{
     listen 80; 
     
-    server_name main.com ns.main.com *.main.com; #ns.main is domain name setting stuff up for diff server 
+    server_name ns.main.com main.com *.main.com; #ns.main is domain name setting stuff up for diff server 
     # server_name localhost;
 
     location / {
@@ -17,7 +17,7 @@ server{
 server{
     listen 80; 
     
-    server_name slave.com ns.slave.com *.slave.com; #ns.master is domain name setting stuff up for diff server 
+    server_name ns.slave.com slave.com *.slave.com; #ns.master is domain name setting stuff up for diff server 
     # server_name localhost;
 
     location / {
